fixed alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,15 +12,16 @@ html {
     align-items: center;
 
     width: 100%;
-    height: 100vh;
 
     margin: 0 auto;
-
-    padding-right: var(--spacer);
-    padding-left: var(--spacer);
+    padding: 0 var(--spacer);
 
     background: var(--color-black);
     color: var(--color-white);
+
+    @media only screen and (orientation: landscape) {
+      height: 100vh;
+    }
 
     .home__container {
       display: flex;
@@ -41,8 +42,13 @@ html {
           margin-top: var(--spacer-sm);
         }
         @media only screen and (max-width: 860px) {
+          width: 75%;
+          margin: auto;
+        }
+        @media only screen and (max-width: 414px) {
           width: 100%;
         }
+
         .home__content-intro {
           text-align: left;
           margin-bottom: 0;
@@ -52,30 +58,20 @@ html {
           
           @media only screen and (max-width: 860px) {
             font-size: var(--spacer-ml);
-            text-align: center;
-          }
-
-          @media only screen and (max-width: 414px) {
-            text-align: left;
           }
         }
         .home__content-title {
-          text-align: center;
           margin-bottom: 0;
           font-size: var(--spacer-xl);
           font-weight: var(--font-weight-bold);
           letter-spacing: 3px;
 
-          @media only screen and (max-width: 860px) {
-            font-size: var(--spacer-lg);
-          }
           @media only screen and (max-width: 414px) {
-            text-align: left;
+            font-size: var(--spacer-lg);
           }
         }
         .home__content-subtitle {
           margin-bottom: 0;
-          text-align: center;
           font-size: var(--spacer-lg);
           font-weight: var(--font-weight-normal);
           letter-spacing: 2px;
@@ -94,9 +90,9 @@ html {
           padding-left: 0;
 
           li {
+            display: inline-block;
             margin-top: var(--spacer-xs);
             padding-right: var(--spacer);
-
             font-size: var(--font-size-callout);
             letter-spacing: 2px;
 
@@ -106,6 +102,13 @@ html {
             }
             @media only screen and (max-width: 860px) {
               font-size: var(--font-size-caption1);
+              text-align: left;
+            }
+            @media only screen and (max-width: 414px) {
+              &:first-child {
+                padding-right: var(--spacer-sm);
+                padding-left: 0;
+              }
             }
           }
         }
